Fixed scrollbar overrides to use correct variable names

--- a/src/styles/overrides/scrollbar-overrides.scss
+++ b/src/styles/overrides/scrollbar-overrides.scss
@@ -12,21 +12,21 @@
 
 	&::-webkit-scrollbar-track {
 		border-radius: 0.5rem;
-		background-color: var(--tile-accent-background-color);
+		background-color: var(--theme-color-accent);
 	}
 
 	&::-webkit-scrollbar-thumb {
 		border-radius: .5rem;
-		background-color: var(--tile-disabled-background-color);
-		box-shadow: inset 0 0 1px var(--box-shadow-color);
+		background-color: var(--theme-color-disabled);
+		box-shadow: inset 0 0 0 var(--theme-color-contrast);
 		transition: box-shadow 200ms;
 
 		&:active {
-			box-shadow: inset 0 0 2px var(--box-shadow-color);
+			box-shadow: inset 0 0 1px var(--theme-color-contrast);
 		}
 	}
 
 	// Firefox Scrollbar Overrides
-	scrollbar-color: var(--tile-disabled-background-color) var(--tile-accent-background-color);
+	scrollbar-color: var(--theme-color-disabled) var(--theme-color-accent);
 	scrollbar-width: thin;
 }
